--- a/estilos/pagina_principal/_body_principal.css
+++ b/estilos/pagina_principal/_body_principal.css
@@ -54,22 +54,22 @@ body{
 #mas_informacion{    
     color: rgb(68, 52, 29);
     font-family: Bahnschrift;
-    font-size: 10px;
-    margin-top: 30px;
+    font-size: 0.625rem;
+    margin-top: 1.875rem;
 }
 
 #mas_informacion .titulo1{
-    margin-left: 10px;
+    margin-left: 0.625rem;
 }
 
 
 #mas_informacion .titulo2{
-    margin-left: 60px;
+    margin-left: 3.75rem;
 }
 
 
 #mas_informacion .titulo3{
-    margin-left: 110px;
+    margin-left: 6.875rem;
 }
 
 
@@ -77,13 +77,13 @@ body{
 
 .mas_info_div .img1{
     background-color: rgb(146, 120, 86);
-    margin-left: 300px;
-    margin-top: -44px;
+    margin-left: 18.75rem;
+    margin-top: -2.75rem;
 }
 
 .mas_info_div .img1{
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     box-shadow: rgb(146, 120, 86) 0px 1px 0px 5px;
 }
 
@@ -92,8 +92,8 @@ body{
 }
 
 .mas_info_div .img1:hover{
-    width: 90px;
-    height: 90px;
+    width: 5.625rem;
+    height: 5.625rem;
     box-shadow: rgb(146, 120, 86) 0px 1px 0px 0px;
 }
 
@@ -105,13 +105,13 @@ body{
 
 .mas_info_div .img2{
     background-color: rgb(86, 69, 47);
-    margin-left: 410px;
-    margin-top: -104px;
+    margin-left: 25.625rem;
+    margin-top: -6.5rem;
 }
 
 .mas_info_div .img2{
-    width: 50px;
-    height: 50px;
+    width: 3.125rem;
+    height: 3.125rem;
     box-shadow: rgb(86, 69, 47) 0px 1px 0px 5px;
 }
 
@@ -121,8 +121,8 @@ body{
 }
 
 .mas_info_div .img2:hover{
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     box-shadow: rgb(146, 120, 86) 0px 1px 0px 0px;
 }
 
@@ -133,13 +133,13 @@ body{
 
 .mas_info_div .img3{
     background-color: rgb(122, 99, 68);
-    margin-left: 500px;
-    margin-top: 0px;
+    margin-left: 31.25rem;
+    margin-top: 0rem;
 }
 
 .mas_info_div .img3{
-    width: 40px;
-    height: 40px;
+    width: 2.5rem;
+    height: 2.5rem;
     box-shadow: rgb(122, 99, 68) 0px 1px 0px 5px;
 }
 
@@ -150,8 +150,8 @@ body{
 }
 
 .mas_info_div .img3:hover{
-    width: 60px;
-    height: 60px;
+    width: 3.75rem;
+    height: 3.75rem;
     box-shadow: rgb(146, 120, 86) 0px 1px 0px 0px;
 }
 
@@ -161,8 +161,46 @@ body{
 
 
 .algunas_img img{
-    width: 400px;
+    width: 25rem;
 }
+
+
+
+
+
+
+
+/* Media queris */
+
+@media (max-whidth: 1200px){
+    body {
+        font-size: 12px;
+    }
+}
+
+@media (max-whidth: 992px){
+    
+}
+
+@media (max-whidth: 768px){
+    
+}
+
+@media (max-whidth: 576px){
+    body{
+        font-size: 5px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
