--- a/galaxi_pag/css_/css_gala.css
+++ b/galaxi_pag/css_/css_gala.css
@@ -3,6 +3,16 @@ body{
 }
 
 
+
+.product_container a{
+    color: #000;
+    text-decoration: none;
+}
+
+
+
+
+
 .cavesera{
     margin-top: 100px;
 }
