--- a/estilos/Cavesera/Estilo_cavesera.css
+++ b/estilos/Cavesera/Estilo_cavesera.css
@@ -139,8 +139,36 @@
         }
 
     
+        .inicio{
+            width: 10px;
+        }
         
+
+
+
+
+        
+        #enlases{
+            margin-top: 8px;
+            margin-left: 200px;
+            width: 500px;
+        }
+
+
+        .nav{
+            font-size: 10px;
+        }
     
+    
+        .nav{
+            margin-left: -200px;
+        }
+
+
+        .nav .u{
+            margin-left: 0px;
+            margin-top: 1px;
+        }
     
     }
 
