--- a/estilos/pagina_principal/SlideShow.css
+++ b/estilos/pagina_principal/SlideShow.css
@@ -47,7 +47,7 @@
 }
 
 .nos_dedicamos a .ar2:hover{
-    width: 400px;
+    width:a 400px;
     box-shadow:  rgb(146, 120, 86) 10px 10px 10px 0px;
 }
 
@@ -143,7 +143,7 @@
     
     .nos_dedicamos a .ar2:active{
         width: 340px;
-        margin-left: 10px;
+        margin-left: 0px;
         box-shadow:  rgb(146, 120, 86) 10px 10px 10px 0px;
     }
 
