--- a/estilos/pagina_principal/_body_principal.css
+++ b/estilos/pagina_principal/_body_principal.css
@@ -4,6 +4,20 @@ body{
     
 }
 
+
+footer{
+    background-color:rgb(86, 69, 47);
+    height: 300px;
+    margin-top: 110px;
+}
+
+
+footer img{
+    width: 30%;
+}
+
+
+
 .contenedor::-webkit-scrollbar {
     width: 7px;
     background-color: aqua;
