--- a/weather-app/styles/header.css
+++ b/weather-app/styles/header.css
@@ -1,7 +1,7 @@
 header{
     display: flex;
     justify-content: center;
-    background: linear-gradient(to bottom,#23b2ded4, #ffffff3f);
+    background: linear-gradient(to bottom, rgb(254, 243, 230), #ffffff3f);
     margin: -22px -7px;
     height: 50px;
 }
@@ -12,22 +12,16 @@ header{
 .header{
     display: flex;
     justify-content: center;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-family:monospace;
     width: 200px;
     font-size: 12px;
     margin-top: 11px;
 }
-
-.country{
-    position: fixed;
-    margin-top: 4%;
-    margin-left: 20%;
-}
 .city{
     position: fixed;
     margin-top: 4%;
-    margin-right: 0%;
+    margin-right: 12%;
 }
 
 
