--- a/weather-app/styles/pronostico.css
+++ b/weather-app/styles/pronostico.css
@@ -1,6 +1,7 @@
 /**Pronostico Container**/
 .pronostico_container{
     margin-top: -5%;
+    overflow-y:scroll;
 }
 
 
@@ -143,4 +144,130 @@
     margin-top: 160%;
     color: black;
 }
+
+
+
+
+
+
+/***-HIDEN***/
+.-hiden{
+    visibility: hidden;
+}
+
+
+
+
+
+
+/**card 6**/
+#fecha_card6{
+    display: inline-block;
+    position: absolute;
+    margin-top: 94%;
+    margin-left: 18%;
+}
+
+
+.card6{
+    display: inline-block;
+    position: absolute;
+    background-color: oldlace;
+    width: 95%;
+    height: 33px;
+    margin-top: 100%;
+    color: black;
+}
+
+
+
+
+/**car 7**/
+#fecha_card7{
+    display: inline-block;
+    position: absolute;
+    margin-top: 110%;
+    margin-left: 18%;
+}
+
+
+
+.card7{
+    display: inline-block;
+    position: absolute;
+    background-color: oldlace;
+    width: 95%;
+    height: 30px;
+    margin-top: 115%;
+    color: black;
+}
+
+/**card 8**/
+#fecha_card8{
+    display: inline-block;
+    position: absolute;
+    margin-top: 124%;
+    margin-left: 18%;
+}
+
+
+.card8{
+    display: inline-block;
+    position: absolute;
+    background-color: oldlace;
+    width: 95%;
+    height: 30px;
+    margin-top: 130%;
+    color: black;
+}
+
+
+
+/**card 9**/
+#fecha_card9{
+    display: inline-block;
+    position: absolute;
+    margin-top: 139%;
+    margin-left: 18%;
+}
+
+.card9{
+    display: inline-block;
+    position: absolute;
+    background-color: oldlace;
+    width: 95%;
+    height: 30px;
+    margin-top: 145%;
+    color: black;
+}
+
+
+
+/**card 10**/
+#fecha_card10{
+    display: inline-block;
+    position: absolute;
+    margin-top: 154%;
+    margin-left: 18%;
+}
+
+
+.card10{
+    display: inline-block;
+    position: absolute;
+    background-color: oldlace;
+    width: 95%;
+    height: 30px;
+    margin-top: 160%;
+    color: black;
+}
+
+
+
+
+
+
+
+
+
 
