--- a/weather-app/styles/pronostico.css
+++ b/weather-app/styles/pronostico.css
@@ -1,42 +1,33 @@
-/**Pronostico Container**/
 .pronostico_container{
-    margin-top: -5%;
-    overflow-y:scroll;
-}
-
-
-.pronostico_container h2{
-    display: inline-block;
-    position: absolute;
-    margin-top: 85%;
+    width: 95%;
 }
 
 
 
 /**card 1**/
-#fecha_card1{
-    display: inline-block;
-    position: absolute;
-    margin-top: 94%;
+.fecha_c{
+    display: block;
+    position: relative;
+    margin-top: 12%;
     margin-left: 18%;
 }
 
 .img_card{
     display: inline-block;
-    position:absolute;
-    width: 60px;
-    margin-top: -18px;
-    margin-left: -20px;
+    position: absolute;
+    margin-top: -0.7%;
+    width: 10%;
+    margin-left: 0%;
 }
 
 
-.card1{
-    display: inline-block;
+.card{
+    display: block;
     position: absolute;
     background-color: oldlace;
-    width: 95%;
+    width: 100%;
     height: 33px;
-    margin-top: 100%;
+    margin-top: -6%;
     color: black;
 }
 
@@ -62,207 +53,6 @@
     margin-left: 240px;
     margin-top: 5px;
 }
-
-
-
-/**car 2**/
-#fecha_card2{
-    display: inline-block;
-    position: absolute;
-    margin-top: 110%;
-    margin-left: 18%;
-}
-
-
-
-.card2{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 115%;
-    color: black;
-}
-
-/**card 3**/
-#fecha_card3{
-    display: inline-block;
-    position: absolute;
-    margin-top: 124%;
-    margin-left: 18%;
-}
-
-
-.card3{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 130%;
-    color: black;
-}
-
-
-
-/**card 4**/
-#fecha_card4{
-    display: inline-block;
-    position: absolute;
-    margin-top: 139%;
-    margin-left: 18%;
-}
-
-.card4{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 145%;
-    color: black;
-}
-
-
-
-/**card 5**/
-#fecha_card5{
-    display: inline-block;
-    position: absolute;
-    margin-top: 154%;
-    margin-left: 18%;
-}
-
-
-.card5{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 160%;
-    color: black;
-}
-
-
-
-
-
-
-/***-HIDEN***/
-.-hiden{
-    visibility: hidden;
-}
-
-
-
-
-
-
-/**card 6**/
-#fecha_card6{
-    display: inline-block;
-    position: absolute;
-    margin-top: 94%;
-    margin-left: 18%;
-}
-
-
-.card6{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 33px;
-    margin-top: 100%;
-    color: black;
-}
-
-
-
-
-/**car 7**/
-#fecha_card7{
-    display: inline-block;
-    position: absolute;
-    margin-top: 110%;
-    margin-left: 18%;
-}
-
-
-
-.card7{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 115%;
-    color: black;
-}
-
-/**card 8**/
-#fecha_card8{
-    display: inline-block;
-    position: absolute;
-    margin-top: 124%;
-    margin-left: 18%;
-}
-
-
-.card8{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 130%;
-    color: black;
-}
-
-
-
-/**card 9**/
-#fecha_card9{
-    display: inline-block;
-    position: absolute;
-    margin-top: 139%;
-    margin-left: 18%;
-}
-
-.card9{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 145%;
-    color: black;
-}
-
-
-
-/**card 10**/
-#fecha_card10{
-    display: inline-block;
-    position: absolute;
-    margin-top: 154%;
-    margin-left: 18%;
-}
-
-
-.card10{
-    display: inline-block;
-    position: absolute;
-    background-color: oldlace;
-    width: 95%;
-    height: 30px;
-    margin-top: 160%;
-    color: black;
-}
-
-
 
 
 
