--- a/weather-app/styles/body.css
+++ b/weather-app/styles/body.css
@@ -71,7 +71,7 @@ body{
     position: absolute;
     margin-top: 3%;
     margin-left: 0%;
-    width: 120px;
+    width: 70%;
 }
 
 
@@ -90,7 +90,7 @@ body{
     position: absolute;
     margin-top: 10%;
     width: 50px;
-    margin-left: 170%;
+    margin-left: 81%;
 }
 
 
@@ -180,8 +180,8 @@ body{
     display: inline-block;
     position: absolute;
     color: #fff;
-    margin-top: 0%;
-    margin-left: 28%;
+    margin-top: -12%;
+    margin-left: 30%;
     font-size: 16px;
     background: transparent;
     border: none;
