actualizacion de pagina 2.1

--- a/weather-app/styles/body.css
+++ b/weather-app/styles/body.css
@@ -88,9 +88,9 @@ body{
 .sky_img{
     display: inline-block;
     position: absolute;
-    margin-top: 10%;
-    width: 50px;
-    margin-left: 81%;
+    margin-top: 17%;
+    width: 30%;
+    margin-left: 61%;
 }
 
 
