--- a/ExpoPage/templates/MA/index.html
+++ b/ExpoPage/templates/MA/index.html
@@ -20,8 +20,8 @@
     <!--Nav var-->
     <nav>
       <h1>Expo tec</h1>
-      <a href="/ExpoPage">Inicio</a>
-      <a href="/ExpoPage/#2">Datos</a>
+      <a href="/">Inicio</a>
+      <a href="/#2">Datos</a>
       <a href="#">creditos</a>
     </nav>
     <!----------->
