--- a/ExpoPage/templates/LO/index.html
+++ b/ExpoPage/templates/LO/index.html
@@ -21,7 +21,7 @@
     <nav>
       <h1>Expo tec</h1>
       <a href="/ExpoPage">Inicio</a>
-      <a href="/#2">Datos</a>
+      <a href="/ExpoPage/#2">Datos</a>
       <a href="#">creditos</a>
     </nav>
     <!----------->
