--- a/ExpoPage/static/css/main/index.css
+++ b/ExpoPage/static/css/main/index.css
@@ -13,32 +13,28 @@ body{
     height: 655px;
     justify-content: flex-start;
     align-items: flex-end;
+    background-size: cover;
 }
 
 .int{
     background-image: url('../../img/space.webp');
-    background-size: cover;
 }
 
 ._1{
     background-image: url('../../img/multiscope-forester-planter.png');
-    background-size: cover;
 }
 
 ._2{
     background-image: url('../../img/slowBot2.jpg');
-    background-size: cover;
     background-position: 0px -140px;
 }
 
 ._3{
     background-image: url('../../img/cleanO.png');
-    background-size: cover;
 }
 
 ._4{
     background-image: url('../../img/3.webp');
-    background-size: cover;
 }
 
 
@@ -67,4 +63,31 @@ body{
     padding: 17px 27px 17px 27px;
     border: solid 2px;
 }
+
+
+/* media queris */
+
+@media (max-width: 360px) {
+
+    .container{
+        height: 655px;
+        background-position: -150px;
+    }
+
+    .int{
+        background-position: -590px;
+    }
+    ._4{
+        background-position: -590px;
+    }
+    .container .texts h2{
+        font-size: 40px;
+    }
+
+
+
+
+}
+
+
 
