--- a/ExpoPage/static/css/nav/nav.css
+++ b/ExpoPage/static/css/nav/nav.css
@@ -34,3 +34,48 @@ nav a{
     text-decoration: none;
     color: white;
 }
+
+
+
+
+
+
+
+
+
+@media (max-width: 744px) {
+    h1{
+        font-size: 25px;
+    }
+
+    nav a{
+        margin-left: 40px;
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 510px) {
+    h1{
+        font-size: 25px;
+    }
+
+    nav a{
+        margin-left: 10px;
+        margin-right: 25px;
+        font-size: 20px;
+    }
+}
+
+
+
+@media (max-width: 400px) {
+    h1{
+        font-size: 0px;
+        visibility: hidden;
+    }
+
+    nav a{
+        margin-left: 25px;
+        font-size: 20px;
+    }
+}
