--- a/ExpoPage/templates/LO/index.html
+++ b/ExpoPage/templates/LO/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="../../static/css/LO/LO.css" />
     <link rel="stylesheet" href="../../static/css/nav/nav.css" />
+    <link rel="stylesheet" href="../../static/css/queris/queris.css" />
   </head>
   <body>
     <style>
