--- a/ExpoPage/templates/SB/index.html
+++ b/ExpoPage/templates/SB/index.html
@@ -8,6 +8,7 @@
     <title>Expo tecno arte 2022</title>
 
     <link rel="stylesheet" href="../../static/css/SB/SB.css" />
+    <link rel="stylesheet" href="../../static/css/queris/queris.css" />
     <link rel="stylesheet" href="../../static/css/nav/nav.css" />
   </head>
   <body>
